--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -332,7 +332,7 @@
                     target="_blank"
                     href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
                     Huhns</a>, <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam
-                    Natarajan</a>, <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a></i>
+                    Natarajan</a>, <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>, <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a></i>
                 <br>
               </p>
               <p>
