--- a/publications/index.html
+++ b/publications/index.html
@@ -146,7 +146,7 @@
                                 <br>
 
                         <li><b>Trust and ethical considerations in a multi-modal, explainable AI-driven chatbot tutoring system: The case of collaboratively solving Rubik’s Cube</b><br>
-                                <i>ICML 2023 TEACH Conversational AI Workshop, Hawaii, 2023</i>
+                                <i>ICML 2023 TEACH Conversational AI Workshop, Hawaii, 2023</i><br>
                                 Kausik Lakkaraju, Vedant Khandelwal, Biplav Srivastava, Forest Agostinelli, Hengtao Tang, Prathamjeet Singh, Dezhi Wu, Matt Irvin, Ashish Kundu<br>
                                 <a href='https://drive.google.com/file/d/14kmrr7HTFXtdpzx-7KEItftQAO_6m5li/view' target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Workshop</span>
