--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -216,6 +216,97 @@
 
           </ul>
 
+
+
+
+          <p style="text-align: justify;">
+            <h3><span style="background-color: aqua;"><b>Recipe Recommendation</b></span></h3>
+            <i><b>Collaborators over the years: </b>
+              <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
+              Vedant Khandelwal,
+              <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>, 
+              <a target="_blank" href="https://www.revathycv.com/">Revathy Venkataramanan</a>,
+              <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav Srivastava</a>
+            </i><br>
+            <i><b>External Collaborators: </b>
+              <a target="_blank" href="https://saakur.github.io/">Sathyanarayanan N. Aakur</a>,
+              Priyadharsini Ramamurthy 
+            </i><br>
+  
+
+            <p align="justify"> Cooking domain is a popular use-case to demonstrate decision-support (AI) capabilities in service of benefits 
+              like precision health with tools ranging from information retrieval interfaces to task-oriented chatbots. 
+              The recipes today are handled as textual documents which makes it difficult for machines to read, reason and handle ambiguity. 
+              This demands a need for better representation of the recipes, overcoming the ambiguity and sparseness that exists in the current textual documents. 
+              We constructed a machine-understandable rich recipe representation (R3), in the form of plans, from the recipes available in natural language. 
+              R3 is infused with additional knowledge such as information about allergens and images of ingredients, possible failures and tips for each atomic cooking step. 
+              To show the benefits of R3, we also built TREAT, a tool for recipe retrieval which uses R3 to perform multi-modal reasoning on the recipe's content 
+              (plan objects - ingredients and cooking tools), food preparation process (plan actions and time), and media type (image, text). 
+              R3 leads to improved retrieval efficiency and new capabilities that were hither-to not possible in textual representation.</span>
+          </p>
+  
+            <script>
+              // Get the modal
+              var modal = document.getElementById("myModal");
+  
+              // Get the image and insert it inside the modal - use its "alt" text as a caption
+              var img = document.getElementById("myImg2");
+              var modalImg = document.getElementById("img01");
+              var captionText = document.getElementById("caption");
+              img.onclick = function () {
+                modal.style.display = "block";
+                modalImg.src = this.src;
+                captionText.innerHTML = this.alt;
+              }
+  
+              // Get the <span> element that closes the modal
+              var span = document.getElementsByClassName("close")[0];
+  
+              // When the user clicks on <span> (x), close the modal
+              span.onclick = function () {
+                modal.style.display = "none";
+              }
+            </script>
+  
+
+  
+            <p><i><b>Representative Publications</b></i></p>
+            <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+              <li>[2022] A Rich Recipe Representation as Plan to Support Expressive Multi-Modal Queries
+                on Recipe Content and Preparation Process
+                <br><i>2022 Workshop on Knowledge Engineering for Planning and Scheduling</i><br>
+                <a href="https://arxiv.org/abs/2203.17109" target="_blank"><b>[Paper]</b></a>
+                <a href="./bib/r3.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                <br><br>
+              </li>
+              <br>
+              <li>[2022] A Multi-Modal Decision Support System with Allergy-Aware Recipe Understanding Powered by a Plan Representation
+                <!-- <a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a> -->
+                <a href="./bib/treat.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                <br>
+              </li>
+              <br>
+  
+              <center>
+                <div>
+                  <figure class="imageLeft">
+                    <img class="top" src="images/r3.png" width="480" height="320" />
+                    <figcaption> Figure 3: Difference between textual representation and R3 for a single instruction.</figcaption>
+                  </figure>
+                  <figure class="imageRight">
+                    <img class="average" src="images/treat.png" width="480" height="250" />
+                    <figcaption> Figure 4: Result of user query of asking recipes containing
+                      bacon.</figcaption>
+                  </figure>
+                </div>
+              </center>
+  
+            </ul>
+  
+
+
+
+
           <h3><span style="background-color: aqua;"><b>Additional Tools</b></span></h3>
           <i><b>Collaborators over the years: </b>
             <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
@@ -299,7 +390,7 @@
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a>
               <br>
               <center><img src="./images/ultra_mapper.png" width="560" height="315"><br>
-                <figcaption>Figure 3: A demo of text-to-classification mapper.</figcaption>
+                <figcaption>Figure 5: A demo of text-to-classification mapper.</figcaption>
               </center>
             </li>
           </ul>
