--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -326,31 +326,91 @@
             <summary><b>Meal Recommendation</b></summary>
             <div class="content">
               <p style="text-align: justify;">
-                <i><b>Team: </b><a target="_blank"
-                    href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
-                    target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a
-                    target="_blank"
-                    href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
-                    Huhns</a>, <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam
-                    Natarajan</a>, <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>, <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a></i>
-                <br>
-              </p>
-              <p>
-                We extend the problem of group recommendation to another use case: meal recommendation. Food is a crucial source for a person’s sustenance, health, and happiness. As a result, a person will benefit from affordable experts (e.g., dieticians) and decision-support technologies (e.g., Artificial Intelligence recommenders) that could help them select meals that they like and are nutritious. This is especially pertinent when the person begins to face a life-long health condition (e.g., diabetes) and has to consider a variety of foods that constitute one or more meals in a day. However, in the absence of a timely, continual, and cost-effective help option to select meals, the person is often unwillingly forced to make hard meal choices, that are often fixed and repeated, between nutrition and taste. It is common to see a person choose healthy food quite late when they have already become a late-stage patient (e.g., diabetes), and the new forced meal plans adversely impact their mental health and happiness. 
-                <br><br>
-              </p>
+              <h3><span style="background-color: aqua;"><b>Recipe Recommendation</b></span></h3>
+              <i><b>Collaborators over the years: </b>
+                <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
+                Vedant Khandelwal,
+                <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>,
+                <a target="_blank" href="https://www.revathycv.com/">Revathy Venkataramanan</a>,
+                <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav
+                  Srivastava</a>
+              </i><br>
+              <i><b>External Collaborators: </b>
+                <a target="_blank" href="https://saakur.github.io/">Sathyanarayanan N. Aakur</a>,
+                Priyadharsini Ramamurthy
+              </i><br>
 
-              <!-- The Modal -->
-              <div id="myModal" class="modal">
-                <span class="close">&times;</span>
-                <img class="modal-content" id="img01">
-                <div id="caption"></div>
-              </div>
+
+              <p align="justify"> Cooking domain is a popular use-case to demonstrate decision-support (AI) capabilities
+                in service of benefits
+                like precision health with tools ranging from information retrieval interfaces to task-oriented
+                chatbots.
+                The recipes today are handled as textual documents which makes it difficult for machines to read, reason
+                and handle ambiguity.
+                This demands a need for better representation of the recipes, overcoming the ambiguity and sparseness
+                that exists in the current textual documents.
+                We constructed a machine-understandable rich recipe representation (R3), in the form of plans, from the
+                recipes available in natural language.
+                R3 is infused with additional knowledge such as information about allergens and images of ingredients,
+                possible failures and tips for each atomic cooking step.
+                To show the benefits of R3, we also built TREAT, a tool for recipe retrieval which uses R3 to perform
+                multi-modal reasoning on the recipe's content
+                (plan objects - ingredients and cooking tools), food preparation process (plan actions and time), and
+                media type (image, text).
+                R3 leads to improved retrieval efficiency and new capabilities that were hither-to not possible in
+                textual representation.</span>
+              </p>
 
               <script>
-                // Call the function with your specific IDs and class
-                setupModal("myImg", "myModal", "img01", "caption", "close");
+                // Get the modal
+                var modal = document.getElementById("myModal");
+
+                // Get the image and insert it inside the modal - use its "alt" text as a caption
+                var img = document.getElementById("myImg2");
+                var modalImg = document.getElementById("img01");
+                var captionText = document.getElementById("caption");
+                img.onclick = function () {
+                  modal.style.display = "block";
+                  modalImg.src = this.src;
+                  captionText.innerHTML = this.alt;
+                }
+
+                // Get the <span> element that closes the modal
+                var span = document.getElementsByClassName("close")[0];
+
+                // When the user clicks on <span> (x), close the modal
+                span.onclick = function () {
+                  modal.style.display = "none";
+                }
               </script>
+
+
+
+              <p><i><b>Representative Publications</b></i></p>
+              <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li>[2022] A Rich Recipe Representation as Plan to Support Expressive Multi-Modal Queries
+                  on Recipe Content and Preparation Process
+                  <br><i>2022 Workshop on Knowledge Engineering for Planning and Scheduling</i><br>
+                  <a href="https://arxiv.org/abs/2203.17109" target="_blank"><b>[Paper]</b></a>
+                  <a href="./bib/r3.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <center><img src="images/r3.png" width="560" height="280"><br>
+                    <figcaption> Figure 4: Difference between textual representation and R3 for a single instruction.
+                    </center>
+                  <br><br>
+                </li>
+                <br>
+                <li>[2022] A Multi-Modal Decision Support System with Allergy-Aware Recipe Understanding Powered by a
+                  Plan Representation <br>
+                  <a href="https://www.researchgate.net/publication/377721769_A_Multi-Modal_Decision_Support_System_with_Allergy-Aware_Recipe_Understanding_Powered_by_a_Plan_Representation" target="_blank"><b>[Paper]</b></a>
+                  <a href="./bib/treat.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <br>
+                  <center><img src="images/treat.png" width="560" height="280"><br>
+                    <figcaption> Figure 5: Result of user query of asking recipes containing bacon.</figcaption>
+                  </center>
+                </li>
+                <br>
+
+              </ul>
             </div>
           </details>
 
