--- a/projects/index.html
+++ b/projects/index.html
@@ -133,15 +133,14 @@
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
                             <span style="background-color:aqua;height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
-                            AI Teaming and Fairness
-
+                            Trustworthy Group Recommendation
                             <span class="tag tag-method">Recommender Systems</span>
                             <span class="tag tag-method">Trusted AI</span>
                         </h3>
                         <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Tarmo Koppel, Biplav Srivastava</i>
                         <p><b>Description: </b>We present an AI-based system to aid in team formation for researchers responding to funding agency proposals. Our approach leverages NLP techniques to extract and normalize technical skills from various data sources, facilitating matching and teaming based on constraints. We have gathered initial feedback from university researchers to deploy the prototype system and published a dataset for broader use.</p>
                             <span>
-                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./teaming/index.html" target="_blank"><b>More Details</b></a>
+                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./group_rec/index.html" target="_blank"><b>More Details</b></a>
                             </span>
                         
                     </td>
