--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -88,7 +88,7 @@
             <div class="content">
               <!--Group reco and fairness-->
               <p style="text-align: justify;">
-                <i><b>Authors: </b><a target="_blank"
+                <i><b>Key Contacts: </b><a target="_blank"
                     href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                     target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a
                     target="_blank"
