--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -326,7 +326,7 @@
             <summary><b>Meal Recommendation</b></summary>
             <div class="content">
               <p style="text-align: justify;">
-              <h3><span style="background-color: aqua;"><b>Recipe Recommendation</b></span></h3>
+              <h3><span style="background-color: aqua;"><b>Recipe Recommendation</b></span></h3><br>
               <i><b>Collaborators over the years: </b>
                 <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
                 Vedant Khandelwal,
@@ -336,8 +336,9 @@
                   Srivastava</a>
               </i><br>
               <i><b>External Collaborators: </b>
-                <a target="_blank" href="https://saakur.github.io/">Sathyanarayanan N. Aakur</a>,
-                Priyadharsini Ramamurthy
+                Priyadharsini Ramamurthy, <a target="_blank" href="https://hem-chandra.github.io/">Hem Chandra
+                  Joshi</a>, <a target="_blank" href="https://saakur.github.io/">Sathyanarayanan N. Aakur</a>, <a
+                  target="_blank" href="https://iitr.ac.in/~HS/Ram_Manohar_Singh">Ram Manohar Singh</a>
               </i><br>
 
 
@@ -388,20 +389,32 @@
 
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li>[2022] Learning About People’s Attitude Towards Food Available in India and Its Implications for
+                  Fair AI-based Systems <br>
+                  <i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
+                  <a href="https://www.researchgate.net/publication/363607753_Learning_About_People%27s_Attitude_Towards_Food_Available_in_India_and_Its_Implications_for_Fair_AI-based_Systems"
+                    target="_blank"><b>[Paper]</b></a>
+                    <a href="https://github.com/uyadav212/FAMPS_DataAndAnalytics"><b>[GitHub]</b></a>
+                  <a href="./bib/food-in-india.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <br>
+                </li>
+                <br>
                 <li>[2022] A Rich Recipe Representation as Plan to Support Expressive Multi-Modal Queries
                   on Recipe Content and Preparation Process
-                  <br><i>2022 Workshop on Knowledge Engineering for Planning and Scheduling</i><br>
+                  <br><i>Workshop on Knowledge Engineering for Planning and Scheduling (KEPS), International Conference
+                    on Automated Planning and Scheduling (ICAPS)</i><br>
                   <a href="https://arxiv.org/abs/2203.17109" target="_blank"><b>[Paper]</b></a>
                   <a href="./bib/r3.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   <center><img src="images/r3.png" width="560" height="280"><br>
                     <figcaption> Figure 4: Difference between textual representation and R3 for a single instruction.
-                    </center>
+                  </center>
                   <br><br>
                 </li>
                 <br>
                 <li>[2022] A Multi-Modal Decision Support System with Allergy-Aware Recipe Understanding Powered by a
                   Plan Representation <br>
-                  <a href="https://www.researchgate.net/publication/377721769_A_Multi-Modal_Decision_Support_System_with_Allergy-Aware_Recipe_Understanding_Powered_by_a_Plan_Representation" target="_blank"><b>[Paper]</b></a>
+                  <a href="https://www.researchgate.net/publication/377721769_A_Multi-Modal_Decision_Support_System_with_Allergy-Aware_Recipe_Understanding_Powered_by_a_Plan_Representation"
+                    target="_blank"><b>[Paper]</b></a>
                   <a href="./bib/treat.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   <br>
                   <center><img src="images/treat.png" width="560" height="280"><br>
