--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -164,18 +164,16 @@
                     McElwain</a></i><br>
 
               <p align="justify"><img id="myImg2" src="./images/ultra_poster.jpg" alt="A poster of ULTRA."
-                  style="width:100%;max-width:100px;height:150px;">We introduce ULTRA (<b><u>U</u></b>niversity
-                <b><u>L</u></b>ead <b><u>T</u></b>eam
-                <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for
-                assisting team formation when researchers respond to RFPs from funding agencies. This is an instance of
-                the
-                general problem of building teams when demand opportunities come periodically and potential members may
-                vary
-                over time. The novelties of our approach are that we: (a) extract technical skills needed about
-                researchers
-                and calls from multiple <i>open</i> data sources and normalize them using NLP techniques, (b) build
-                teaming
-                solutions based on constraints, (c) computationally and qualitatively evaluate our system in two diverse
+                  style="width:100%;max-width:100px;height:150px;">We introduce <span style="color:violet">ULTRA
+                  (<b><u>U</u></b>niversity
+                  <b><u>L</u></b>ead <b><u>T</u></b>eam
+                  <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis)</span>, an novel AI-based
+                system for assisting team formation when researchers respond to RFPs from funding agencies. This is an
+                instance of the general problem of building teams when demand opportunities come periodically and
+                potential members may vary over time. The novelties of our approach are that we: (a) extract technical
+                skills needed about researchers and calls from multiple <i>open</i> data sources and normalize them
+                using NLP techniques, (b) build teaming solutions based on constraints, (c) computationally and
+                qualitatively evaluate our system in two diverse
                 settings (US, India) to establish generality of our approach, and (d) create and publish a dataset that
                 others can use.<br><br> <span style="color:violet"><i>(This research study has been certified as exempt
                     from
@@ -343,23 +341,22 @@
 
 
               <p align="justify"> Cooking domain is a popular use-case to demonstrate decision-support (AI) capabilities
-                in service of benefits
-                like precision health with tools ranging from information retrieval interfaces to task-oriented
-                chatbots.
-                The recipes today are handled as textual documents which makes it difficult for machines to read, reason
-                and handle ambiguity.
-                This demands a need for better representation of the recipes, overcoming the ambiguity and sparseness
-                that exists in the current textual documents.
-                We constructed a machine-understandable rich recipe representation (R3), in the form of plans, from the
-                recipes available in natural language.
-                R3 is infused with additional knowledge such as information about allergens and images of ingredients,
-                possible failures and tips for each atomic cooking step.
-                To show the benefits of R3, we also built TREAT, a tool for recipe retrieval which uses R3 to perform
-                multi-modal reasoning on the recipe's content
-                (plan objects - ingredients and cooking tools), food preparation process (plan actions and time), and
-                media type (image, text).
-                R3 leads to improved retrieval efficiency and new capabilities that were hither-to not possible in
-                textual representation.</span>
+                in service of benefits like precision health with tools ranging from information retrieval interfaces to
+                task-oriented chatbots. The recipes today are handled as textual documents which makes it difficult for
+                machines to read, reason and handle ambiguity. This demands a need for better representation of the
+                recipes, overcoming the ambiguity and sparseness that exists in the current textual documents. We
+                constructed a machine-understandable <span style="color:violet">rich recipe representation (R3)</span>,
+                in the form of plans, from the recipes available in natural language. R3 is infused with additional
+                knowledge such as information about allergens and images of ingredients, possible failures and tips for
+                each atomic cooking step.
+
+                <br><br>
+                To show the benefits of R3, we also built <span style="color:violet">TREAT</span>, a tool for recipe
+                retrieval which uses R3 to perform
+                multi-modal reasoning on the recipe's content (plan objects - ingredients and cooking tools), food
+                preparation process (plan actions and time), and media type (image, text). R3 leads to improved
+                retrieval efficiency and new capabilities that were hither-to not possible in textual
+                representation.</span>
               </p>
 
               <script>
@@ -394,7 +391,7 @@
                   <i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
                   <a href="https://www.researchgate.net/publication/363607753_Learning_About_People%27s_Attitude_Towards_Food_Available_in_India_and_Its_Implications_for_Fair_AI-based_Systems"
                     target="_blank"><b>[Paper]</b></a>
-                    <a href="https://github.com/uyadav212/FAMPS_DataAndAnalytics"><b>[GitHub]</b></a>
+                  <a href="https://github.com/uyadav212/FAMPS_DataAndAnalytics"><b>[GitHub]</b></a>
                   <a href="./bib/food-in-india.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   <br>
                 </li>
