--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -173,12 +173,10 @@
                 potential members may vary over time. The novelties of our approach are that we: (a) extract technical
                 skills needed about researchers and calls from multiple <i>open</i> data sources and normalize them
                 using NLP techniques, (b) build teaming solutions based on constraints, (c) computationally and
-                qualitatively evaluate our system in two diverse
-                settings (US, India) to establish generality of our approach, and (d) create and publish a dataset that
-                others can use.<br><br> <span style="color:violet"><i>(This research study has been certified as exempt
-                    from
-                    the IRB per 45 CFR 46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina
-                    IRB#Pro00127449.)</i></span>
+                qualitatively evaluate our system in two diverse settings (US, India) to establish generality of our
+                approach, and (d) create and publish a dataset that others can use.<br><br> <span
+                  style="color:violet"><i>(This research study has been certified as exempt from the IRB per 45 CFR
+                    46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina IRB#Pro00127449.)</i></span>
               </p>
 
               <script>
