--- a/publications/index.html
+++ b/publications/index.html
@@ -105,10 +105,60 @@
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Recommender Systems</span>
                             <br>
+
+                        <li><b>On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)</b><br>
+                            <!-- <i>Under Review at the 34th International Conference on Automated Planning and Scheduling, 2024</i><br> -->
+                            Vishal Pallagani, Bharath Muppasani, Kaushik Roy, Francesco Fabiano, Andrea Loreggia, Keerthiram Murugesan, Biplav Srivastava, Francesca Rossi, Lior Horesh, Amit Sheth<br>
+                            <a href='https://arxiv.org/abs/2401.02500' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Preprint</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br>
+                    
+                        <li><b>Plan-SOFAI: A Neuro-Symbolic Planning Architecture</b><br>
+                            <i>Neuro-Symbolic Learning and Reasoning in the Era of Large Language Models (NuCLeaR) Workshop at AAAI, 2024</i><br>
+                            Francesco Fabiano, Vishal Pallagani, Marianna Bergamaschi Ganapini, Lior Horesh, Andrea Loreggia, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava<br>
+                            <a href='https://openreview.net/pdf?id=ORAhay0H4x' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br>
                     </ul>
 
                     <h2>2023</h2>
                     <ul class="papers-list">
+
+                        <li><b>Value-based Fast and Slow AI Nudging</b><br>
+                            <i>Ethics and Trust in Human-AI Collaboration: Socio-Technical Approaches Workshop at IJCAI, 2023</i><br>
+                            Marianna B Ganapini, Francesco Fabiano, Lior Horesh, Andrea Loreggia, Nicholas Mattei, Keerthiram Murugesan, Vishal Pallagani, Francesca Rossi, Biplav Srivastava, Brent Venable<br>
+                            <a href='https://ceur-ws.org/Vol-3547/paper6.pdf' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br>
+
+                        <li><b>Understanding the Capabilities of Large Language Models for Automated Planning</b><br>
+                            Vishal Pallagani, Bharath Muppasani, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava, Lior Horesh, Francesco Fabiano, Andrea Loreggia<br>
+                            <a href='https://arxiv.org/abs/2305.16151' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Preprint</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <br>
+
+                        <li><b>Fast and Slow Planning</b><br>
+                            Francesco Fabiano, Vishal Pallagani, Marianna Bergamaschi Ganapini, Lior Horesh, Andrea Loreggia, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava<br>
+                            <a href='https://arxiv.org/abs/2303.04283' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Preprint</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br>
+
+                        <li><b>Plansformer: Generating symbolic plans using transformers</b><br>
+                            <i>Generalization in Planning (GenPlan) Workshop at NeurIPS, 2023</i><br>
+                            Vishal Pallagani, Bharath Muppasani, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava, Lior Horesh, Francesco Fabiano, Andrea Loreggia<br>
+                            <a href='https://openreview.net/pdf?id=gWhXByDv2n' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br>
 
                         <li><b>LLMs for Financial Advisement: A Fairness and Efficacy Study in Personal Decision 
                             Making</b><br>
