move jan updates to news log

--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -46,6 +46,18 @@
               <div class="newsjournal-year">2023</div>
             </div>
 
+            <!-- Jan 2024 ... -->
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-date month">January</div>
+              <div class="timeline-content">
+                <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a> is joining us as a new Ph.D. student.</p>
+            </div>
+              <div class="timeline-content">
+                  <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> will present a demo paper at CODS-COMAD conference (Group recommendation). We are also co-organizing the tutorial track of the conference.</p>
+              </div>
+          </div>
+          
             <!-- December 2023 -->
             <div class="newsjournal-item">
               <div class="newsjournal-month">December</div>
